<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.sdimosikvip.eazystock.ui.home.HomeFragment"
        android:label="@string/fragment_home_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_fragment_home_to_fragment_search"
            app:destination="@id/fragment_search"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_fragment_home_to_fragment_detail"
            app:destination="@id/fragment_detail"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in"
            app:popUpToInclusive="false"></action>
    </fragment>

    <fragment
        android:id="@+id/fragment_search"
        android:name="com.sdimosikvip.eazystock.ui.search.SearchFragment"
        android:label="@string/fragment_search_name"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_fragment_search_to_fragment_detail"
            app:destination="@id/fragment_detail"
            app:enterAnim="@android:anim/fade_in"
            app:popEnterAnim="@android:anim/fade_in"></action>
    </fragment>

    <fragment
        android:id="@+id/fragment_detail"
        android:name="com.sdimosikvip.eazystock.ui.detail.DetailFragment"
        android:label="@string/fragment_detail_name"
        tools:layout="@layout/fragment_detail" />
</navigation>