<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:fillViewport="true"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_price_textview"
            style="@style/TextView.Default.Active.XXL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="₽4 764,64" />

        <TextView
            android:id="@+id/day_delta_price_textview"
            style="@style/TextView.Semi.Active.S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxWidth="150dp"
            android:singleLine="true"
            android:textColor="@color/plus_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_price_textview"
            tools:text="+₽55 (+1,15%)" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_bar"
            app:layout_constraintBottom_toBottomOf="@+id/line_chart"
            app:layout_constraintEnd_toEndOf="@+id/line_chart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_delta_price_textview" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_delta_price_textview" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_chart">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/day_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:text="@string/short_day" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/week_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/short_week" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/month_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/short_month" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/half_year__button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/short_half_year" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/year_button"
                    style="@style/DetailedInformationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/short_year" />
            </RadioGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/button"
            style="@style/TextView.Semi.Active.M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:padding="16dp"
            android:text="@string/buy"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>